--- a/client/src/App.css
+++ b/client/src/App.css
@@ -62,6 +62,9 @@ body {
 }
 
 .form button {
+  display: block;
+  width: 60%;
+  margin: auto;
   padding: 10px 20px;
   color: #03e9f4;
   font-size: 16px;
@@ -70,8 +73,8 @@ body {
   overflow: hidden;
   transition: 0.5s;
   letter-spacing: 4px;
-  margin-right: 20px;
   background-color: transparent;
+  cursor: pointer;
 }
 
 /* Game */
